--- a/packages/dynamic-defaults/package.json
+++ b/packages/dynamic-defaults/package.json
@@ -8,7 +8,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "ava": "^0.24.0"
+    "ava": "^0.24.0",
+    "yiwn-shortid": "0.0.1"
   },
   "devDependencies": {
     "ajv": "^6.0.0"
